fixed width of contact link on mobile

--- a/css/nav.css
+++ b/css/nav.css
@@ -845,7 +845,6 @@
 	opacity: 1;
 	line-height: inherit;
 	font-size: 1em;
-	display: block;
 	background: transparent;
 	padding: 0 0 2px;
 	border-bottom: 2px solid transparent;
